fix: Console scaling up due to non-wrapped text. AMDG

--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -20,6 +20,7 @@
     --geral-button-color-hover: #888888;
 
     --rom-card-width: 20rem;
+    --console-width: 20rem;
 
     font-family: "Pixelify Sans", sans-serif;
 }
